# rs-accumulator

./: .gitignore  Cargo.toml
interaction/: devnet.snippets.sh  mainnet.snippets.sh
meta/: Cargo.toml
meta/src/: main.rs
scenarios/: accumulator.scen.json
src/: accumulator.rs  config.rs  helpers.rs  liquid_proxy.rs  manager.rs  query.rs  storage.rs  structs.rs
tests/: accumulator_scenario_go_test.rs  accumulator_scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
